--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <ion-app>
-    <ion-menu side="start" menuId="first">
+    <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-menu side="start" menuId="menuId">
         <ion-header>
           <ion-toolbar color="primary">
             <ion-title>Start Menu</ion-title>
@@ -7,7 +10,7 @@
         </ion-header>
         <ion-content>
           <ion-list>
-            <ion-item>Menu Item</ion-item>
+            <ion-item (click)="goList()">Listas</ion-item>
             <ion-item>Menu Item</ion-item>
             <ion-item>Menu Item</ion-item>
             <ion-item>Menu Item</ion-item>
